# pardi

./: .gitignore  Cargo.toml  README.md
src/: main.rs  parser.rs  presenter.rs  printer.rs
test/: corrupted.DCM
